# Projects-university

./: .gitignore  README.md
1st-Year-Semester-1/Basis conversions/: main.py
1st-Year-Semester-1/Basis-conversions/: main.py
1st-Year-Semester-1/Fundamentals-of-programming/a1-car-men01/: p1.py  p2.py  p3.py
1st-Year-Semester-2/Graphs/: directed_graph.py  main.py  undirected_graph.py
1st-Year-Semester-2/OOP/a2-3-car-men01/: CMakeLists.txt  UI.c  UI.h  controller.c  controller.h  domain.c  domain.h  dynamic_array.c  dynamic_array.h  main.c  repository.c  repository.h  tests.c  tests.h  undo.c  undo.h
1st-Year-Semester-2/OOP/oop-a4-5-car-men01/keep_calm_and_adopt_a_pet/keep_calm_and_adopt_a_pet/: CMakeLists.txt  UI.cpp  UI.h  dog.cpp  dog.h  dynamic_array.cpp  keep_calm_and_adopt_a_pet.vcxproj  keep_calm_and_adopt_a_pet.vcxproj.filters  main.cpp  repository.cpp  repository.h  service.cpp  service.h  tests.cpp  tests.h
1st-Year-Semester-2/OOP/oop-a4-5-car-men01/keep_calm_and_adopt_a_pet/keep_calm_and_adopt_a_pet/.opencppcov/keep_calm_and_adopt_a_pet/: Debug_x64.json
1st-Year-Semester-2/OOP/oop-a4-5-car-men01/keep_calm_and_adopt_a_pet/keep_calm_and_adopt_a_pet/x64/Debug/: keep_calm_and_adopt_a_pet.exe.recipe  keep_calm_and_adopt_a_pet.ilk  vc143.idb
1st-Year-Semester-2/OOP/oop-a4-5-car-men01/keep_calm_and_adopt_a_pet/keep_calm_and_adopt_a_pet/x64/Debug/keep_cal.40e99489.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  keep_calm_and_adopt_a_pet.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
semester 1/: test.txt
(+471 files in other folders)
